le code fonctionne sur codepen, terminé

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D-Heart</title>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="3d-heart">
+    <div class="heart">
 
     </div>
+    <!-- tester sur codepen-->
     
 </body>
 </html>
